// Copyright 2020 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package chrome.dir_metadata;

option go_package = "infra/tools/dirmd/proto;dirmdpb";

// Metadata information for a directory.
//
// Individual fields/subfields are inherited by subdirectories, unless
// overridden by inherit_from.
// For example, if a/DIR_METADATA specifies `monorail.project="chromium"` and
// a/b/DIR_METADATA file exists and does not specify `monorail.project`, then
// `a/b`'s Monorail project is "chromium".
// Note: this semantics can be extended to opt-out individual fields from
// inheritance.
message Metadata {
  // The directory to inherit results from. Valid values:
  // *   empty string, which means the parent directory. This is the default.
  // *   a source-absolute path. The root is specified via -root flag, so it is
  //     not necessarily the repo root (it is for chromium/src though).
  //     Example: "//components/autofill" for
  //     https://source.chromium.org/chromium/chromium/src/+/HEAD:components/autofill/
  //     Note: paths relative to DIR_METADATA file are not supported.
  // *   "-" means do not inherit from anything.
  //     This is equivalent to "set noparent" in OWNERS files.
  //
  // This field is useful when very related code is scattered in different
  // directories, for example in Java, implementation and tests of the same
  // feature live in different directories. This field can be used to
  // 1) In the impl directory: define the feature-specific metadata.
  // 2) In the test directory: refer to the impl directory.
  //
  // Note that if bar/DIR_METADATA has inherit_from="foo", then bar's metadata
  // is inherited only from foo, and bar's parent is ignored (i.e. no
  // multi-inheritence). However, given that foo and bar actually have the same
  // parent, bar inherits the root metadata indirectly via foo.
  string inherit_from = 8;

  // Monorail metadata. Its component field should always map to the same
  // team_email field (see below) for every directory that it is listed in.
  Monorail monorail = 1;

  // The team responsible for the directory. Only a single email is allowed.
  // For example, “team-email@chromium.org”.
  string team_email = 2;

  // The code in this directory is specific to this OS.
  OS os = 3;

  // WPT-specific metadata.
  WPT wpt = 4;

  // Private buganizer metadata.
  Buganizer buganizer = 5;

  // ResultDB tags.
  ResultDB resultdb = 6;

  // Public buganizer metadata.
  Buganizer buganizer_public = 7;

  // Reserved for metadata information for third-party code. See
  // https://opensource.google/docs/thirdparty/metadata/
  reserved 13;
  reserved "third_party";
}

// WPT is WebPlatformTest-specific metadata.
message WPT {
  // Whether wpt-importer should notify the team about new failures.
  Trinary notify = 1;
}

// Supported OS to tag a directory.
enum OS {
  OS_UNSPECIFIED = 0;
  LINUX = 1;
  WINDOWS = 2;
  MAC = 3;
  ANDROID = 4;
  IOS = 5;
  CHROME_OS = 6;
  FUCHSIA = 7;
}

// Monorail specific metadata.
message Monorail {
  // The Monorail project. For example, “chromium”.
  string project = 1;
  // The Monorail component. For example, “UI>Browser>Zoom”.
  // Only a single component is allowed.
  string component = 2;
}

// Buganizer specific metadata.
message Buganizer {
  // The component id. For example, 690873.
  int64 component_id = 1;
}

// Trinary is a tri-state boolean.
//
// It is convenient for conceptually-boolean fields that need inheritance.
// Plain bool does not work well because proto3 does not distinguish between
// false and absence of the value. Unlike bool, the default value of Trinary
// is TRINARY_UNSPECIFIED which is different from NO.
//
// Unfortunately the JSON representation are strings "YES" and "NO", as opposed
// to more natural true and false.
// The alternative to Trinary is BoolValue
// https://github.com/protocolbuffers/protobuf/blob/master/src/google/protobuf/wrappers.proto#L101
// which has JSON representation as `true` and `false`, but then the text-proto
// representation is verbose: `wpt { notify { value: true }}`.
// Given that we will have more DIR_METADATA files than code that interprets
// the files, we make a choice in favor of clean DIR_METADATA files.
enum Trinary {
  TRINARY_UNSPECIFIED = 0;
  YES = 1;
  NO = 2;
}

// ResultDB contains a list of tags to be attached to results of tests
// defined in a directory.
message ResultDB {
  // A list of tags to be attached to results of tests defined in a directory.
  // Each tag must be formatted as "key:value", and keys can be repeated.
  repeated string tags = 1;
}
